# rrdpit

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  pkg.yml
docker/: entrypoint.sh
pkg/debian/: description.txt  postinst
pkg/rules/: packages-to-build.yml  packages-to-test.yml
pkg/test-scripts/: test-rrdpit.sh
src/: lib.rs  main.rs  options.rs  rrdp.rs  sync.rs  xml.rs
test-resources/source-2/: file1.txt
test-work/: ignore
